--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
-spring.application.name=AlugeulCarro
+
+spring.datasource.url=jdbc:h2:mem:alugueldb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+spring.h2.console.settings.trace=false
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.flyway.enabled=false
+spring.liquibase.enabled=false
+
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=America/Sao_Paulo
+
+server.port=8080
+server.servlet.context-path=/
